# capstone_simulator

./: .gitignore  BENCHMARK_FIX.md  BW_Multi_Target_Simulator_v2.py  BlueWaterMacro_Simulator.ipynb  BlueWaterMacro_Simulator.py  CLAUDE.md  CONTRIBUTING.md  Hull_X_levels.pkl  Hull_df.pkl  LICENSE  PORTFOLIO_CALCULATION_EXPLANATION.md  README.md  Untitled1.ipynb  complexity_score.py  complexity_temp.py  df_w_112023.csv  hash_benefits.md  hull_data_checking.ipynb  hull_simulator_v1.ipynb  macro_simulator_v1.ipynb  macro_simulator_v2.ipynb  macro_simulator_v3.ipynb  macro_simulator_v4.ipynb  pyproject.toml  requirements.txt  research.yml  run_test.py  simple_test.py  test_file_saving.py  test_plotting.py
.claude/: settings.local.json
.ipynb_checkpoints/: data_checking-checkpoint.ipynb  macro_simulator_v1-checkpoint.ipynb  macro_simulator_v2-checkpoint.ipynb  macro_simulator_v3-checkpoint.ipynb
.virtual_documents/: macro_simulator_v3.ipynb
data/: .gitignore
docs/: Blue_Water_Macro_Quantitative_Trading_Tutorial.md  Blue_Water_Macro_Tutorial.html  Medium_Rolling_Simulations_Article.md  Parameter_Sweeps_and_Xarray.md  README.md
notebooks/: 01_single_target_tutorial.ipynb  02_multi_target_tutorial.ipynb  NOTEBOOK_FIXES.md
scripts/: README.md  generate_html_tutorial.py  generate_pdf_simple.py  generate_pdf_tutorial.py
src/: __init__.py  app_streamlit.py  multi_target_simulator.py  multi_target_simulator_streamlined.py  multi_target_utils.py  plotting_utils.py  single_target_simulator.py  test_simulation.py  utils_simulate.py  view_cached_results.py  xgboost_sweep.py
tests/: __init__.py  conftest.py  test_complexity_score.py  test_multi_target_simulator.py  test_single_target_simulator.py  test_utils_simulate.py
